Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13328

ALTER TABLE ... DISCARD TABLESPACE takes a lot of time with large buffer pool (>128G)

    XMLWordPrintable

Details

    • 10.1.29

    Description

      ALTER TABLE ... DISCARD TABLESPACE takes a lot of time with large buffer pool (>128G).

      Steps to reproduce:

      1. drop / create an InnoDB table
      2. discard the table space
      3. increase the buffer pool size.
      4. Re-try once you have a 128G+ buffer pool, and re-run #1 & #2.

      The discard time should be increasing.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              ccalender Chris Calender (Inactive)
              Votes:
              2 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Time Spent - 3d 5.5h Remaining Estimate - 3h
                  3h
                  Logged:
                  Time Spent - 3d 5.5h Remaining Estimate - 3h
                  3d 5.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.